--- a/src/snippets/resources.html
+++ b/src/snippets/resources.html
@@ -59,7 +59,7 @@
     </li>
     <li>
       <a
-        href="https://www.youtube.com/@dyte-io"
+        href="https://www.youtube.com/@productdb"
         target="_blank"
         class="flex items-center gap-2 text-inherit"
       >
